# clubview-api

./: Cargo.toml  diesel.toml
migrations/2021-02-08-094956_add_users/: up.sql
migrations/2021-02-28-144604_add_messages/: down.sql  up.sql
migrations/2021-03-03-070325_add_channels/: up.sql
migrations/2021-03-03-074112_add_clubs/: up.sql
reference/: claris-improved.v1.yaml
src/: handlers.rs  main.rs  models.rs  schema.rs
