[package]
name = "claris_improved_api"
version = "0.1.0"
authors = ["Fumitsuki-1921124 <s1921124@s.do-johodai.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0.123"
derive_more = "0.99.11"
uuid = "0.8.2"
serde_json = "1.0.64"

[dependencies.diesel-derive-enum]
version = "1.1.0"
features = ["postgres"]
[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
[dependencies.diesel]
version = "1.4.5"
features=["postgres", "r2d2", "chrono", "uuid", "serde_json"]
